# GeneSims

./: .gitignore  README.md  dockerfile  requirements.txt
backend/: Cargo.toml
backend/src/: main.rs
backend/static/: frontend-ef5fd77bcc059d11.js  frontend-ef5fd77bcc059d11_bg.wasm  index.html
frontend/: Cargo.toml  index.html
frontend/src/: layout.rs  main.rs  routes.rs
frontend/src/routes/: drift.rs  driftmig.rs  driftmut.rs  selecdrift.rs  selection.rs  wbar.rs
src/: __init__.py  routes.py  selection.py
src/app/: __init__.py  drfit.py  drift_helper.py  drift_migration.py  drift_mutation.py  routes.py  selection.py  selection_drift.py  wbar.py
src/app/static/: style.css
src/app/templates/: drift.html  drift_migration.html  drift_mutation.html  index.html  selection.html  selection_drift.html  w_bar.html
src/templates/: base.html  drift.html  drift_migration.html  drift_mutation.html  selection.html  selection_drift.html  w_bar.html
