[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = "0.17.0"
wasm-bindgen = "0.2.84"
web-sys = { version = "0.3.61", features = ["console", "HtmlCanvasElement", "HtmlSelectElement", "HtmlInputElement"] }
wasm-logger = "0.2.0"
log = "0.4.17"
plotters = "0.3"
plotters-canvas = "0.3"
js-sys = "0.3"
rand = "0.8"
rand_distr = "0.4"
getrandom = { version = "0.2", features = ["js"] }